Add Functional Domain Modeling lecture v0.1 and update Java 25 specs
Add new lecture documentation v0.1 based on "Domain Modeling Made Functional", covering:
- Part I: Domain and Type System (DDD, Records, Simple/Compound Types)
- Part II: Workflow and Error Handling (Pipeline, ROP)
- Part III: Architecture (Persistence Ignorance, Onion Architecture)
- Part IV: Comprehensive E-commerce Project

Update existing lecture notes (v0.2, DOP) regarding Java 25 features:
- Clarify JEP 468 (Derived Record Creation) is not included in Java 25.
- Replace `with` expression examples with manual `withXxx` method pattern.
- Add Java 17 to 25 DOP feature comparison table.

Update .claude/settings.local.json to include new WebFetch domains.